
= rufus-scheduler CHANGELOG.txt


== rufus-scheduler - 3.0.7    released 2014/03/18

- implement Scheduler #occurrences and #timeline, inspired by kreynolds
- implement Job #last_work_time and #mean_work_time
- implement Job#count
- add more info to the stderr error output (scheduler/tz info)
- prevent skipping a day on switch to summertime, gh-114, thanks Matteo


== rufus-scheduler - 3.0.6    released 2014/02/14

- avoid "can't be called from trap context" on Ruby 2.0, gh-98


== rufus-scheduler - 3.0.5    released 2014/01/30

- implement Job#call(do_rescue=false), gh-97
- implement :first => :now for repeat jobs, gh-96


== rufus-scheduler - 3.0.4    released 2014/01/19

- make CronLine#frequency faster (to avoid 20s schedule_cron times)


== rufus-scheduler - 3.0.3    released 2013/12/12

- CronLine#previous_time fix by Yassen Bantchev (https://github.com/yassenb)
- introduce ZookeptScheduler example in the readme
- rename #consider_lockfile to #lock and introduce #unlock


== rufus-scheduler - 3.0.2    released 2013/10/22

- default :max_work_threads to 28
- fix "rufus rushes to create work threads" issue, thanks Gatis Tomsons
- introduce Rufus::Scheduler::NotRunningError, thanks Gatis Tomsons


== rufus-scheduler - 3.0.1    released 2013/10/19

- fix post_install_message, thanks Ted Pennings
- bring back .parse_time_string and .parse_duration_string


== rufus-scheduler - 3.0.0    released 2013/10/02

- complete rewrite.
- introduce scheduler.interval('10s') { ... }


== rufus-scheduler - 2.0.24    released 2013/09/02

- lowered tzinfo dependency to >= 0.3.22
  http://stackoverflow.com/questions/18551970


== rufus-scheduler - 2.0.23    released 2013/07/26

- mutex vs timeout fix by Tobias Kraze


== rufus-scheduler - 2.0.22    released 2013/07/16

- parse "/10 * * * *" again (like <= 2.0.19 did), thanks @skrd


== rufus-scheduler - 2.0.21    released 2013/07/15

- add license (MIT) to gemspec file


== rufus-scheduler - 2.0.20    released 2013/07/15
