@@ -30,6 +30,7 @@ job scheduler for Ruby (at, cron, in and every jobs).
 
   s.add_development_dependency 'rake'
   s.add_development_dependency 'rspec', '>= 2.13.0'
+  s.add_development_dependency 'chronic'
 
   s.require_path = 'lib'
 
